# easy_button

./: .clang-format  CMakeLists.txt  Makefile  README.md  README.vsdx  build.mk  example_test.c  example_user.c  example_user_linux.c  main.c
ebtn/: bit_array.h  ebtn.c  ebtn.h
libscl/: .gitignore  CMakeLists.txt
libscl/include/libscl/: SCL.h  SCL_map.h
libscl/src/: map.c
